# munihac24-mcmc

./: .gitignore  cabal.project.freeze  climate-data.csv  flake.nix  munihac24-mcmc.cabal  project.cabal  readme.md  readme.org  temperatures.csv
app/: Main.hs
data/: climate-data.csv
src/: Climate.hs  Data.hs
